@@ -1,4 +1,4 @@
-#Thu Feb 25 08:41:19 PST 2010
+#Sat Mar 13 14:11:38 PST 2010
 admin.action.refresh=Suchindex aktualisieren
 admin.action.save=\u00C4nderungen speichern
 admin.adduser.caption.adduser=Benutzer-Account hinzuf\u00FCgen
@@ -16,6 +16,7 @@ admin.cache.caption.maxage=Maximale Lebensdauer f\u00FCr Cacheelement (in Sekund
 admin.cache.caption.totalsize=Maximale Anzahl von gecacheten Elementen
 admin.cache.help.individualsize=Maximale Anzahl von Elementen, die im Speicher pro Cache gespeichert werden k\u00F6nnen.<br />Ein h\u00F6herer Wert verbessert die Performance, erh\u00F6ht aber den Speicherverbrauch.
 admin.cache.help.totalsize=Maximale Anzahl von Elementen, die im Speicher f\u00FCr alle Caches gespeichert werden kann.<br />Ein h\u00F6herer Wert verbessert die Performance, erh\u00F6ht aber den Speicherverbrauch.
+admin.cache.help.xmlconfig=<b>Nur f\u00FCr fortgeschrittene Benutzer</b>\: Experten, die erweiterte Cache Konfigurationen ben\u00F6tigen, k\u00F6nnen eine <code>ehcache.xml</code> Konfigurationsdatei erstellen, mit der alle Einstellungen, die weiter unten angegeben sind, \u00FCberschrieben werden. Siehe <a href\="http\://ehcache.org/">ehcache.org</a> f\u00FCr weitere Details.
 admin.cache.message.clearfailed=Fehler beim L\u00F6schen des Cache\: {0}.
 admin.caption.adduser=Add (Hinzuf\u00FCgen)
 admin.caption.defaulttopic=Standardthema
